REGRESSION (r183300): Background missing on top links on apple.com https://bugs.webkit.org/show_bug.cgi?id=145079 rdar://problem/20914252

Reviewed by Tim Horton.

Source/WebCore:

GraphicsLayerCA::setVisibleAndCoverageRects() only set the m_intersectsCoverageRect
flag if the coverage rect changed, but it doesn't if you simply change the size of
the layer.

Instead, always re-evaluate the intersection, and set the CoverageRectChanged bit
if it changes.

Test: compositing/visible-rect/backing-change-height-from-zero.html

* platform/graphics/ca/GraphicsLayerCA.cpp:
(WebCore::GraphicsLayerCA::setVisibleAndCoverageRects):
* rendering/RenderLayerBacking.cpp:
(WebCore::RenderLayerBacking::shouldSkipLayerInDump): Don't skip any layers in a
debug layer dump, to assist debugging.

LayoutTests:

Composited box that toggles to a non-zero height and dumps layers.

* compositing/visible-rect/backing-change-height-from-zero-expected.txt: Added.
* compositing/visible-rect/backing-change-height-from-zero.html: Added.

Canonical link: https://commits.webkit.org/163109@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@184421 268f45cc-cd09-0410-ab3c-d52691b4dbfc